# aws-capacity-hunter

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/plans/: 2026-06-29-flatten-and-rename-to-capacity-hunter.md
docs/specs/: 2026-06-25-spot-scores-tool-design.md
legacy/: README.md
legacy/reserve-capacity/: README.md  reserve-capacity.sh
reserve-capacity/: reserve-capacity.sh
scripts/reserve-capacity/: README.md  reserve-capacity.sh
spot-scores/: README.md  pyproject.toml
spot-scores/docs/plans/: 2026-06-25-spot-scores-tool.md
spot-scores/legacy/: get-spot-scores.sh
spot-scores/src/spot_scores/: __init__.py  cli.py  history.py  presets.py  rank.py  render.py
spot-scores/tests/: test_cli.py  test_history.py  test_presets.py  test_rank.py  test_render.py  test_reserve.py  test_scoring.py  test_smoke.py
src/capacity_hunter/: __init__.py  cli.py  history.py  presets.py  rank.py  render.py  reserve.py  scoring.py
tests/: test_cli.py  test_history.py  test_presets.py  test_rank.py  test_render.py  test_reserve.py  test_scoring.py  test_smoke.py
