[project]
name = "capacity-hunter"
version = "0.1.0"
description = "Hunt scarce EC2 capacity: Spot Placement Scores and On-Demand Capacity Reservations."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Doug Morand" }]
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
capacity-hunter = "capacity_hunter.cli:main"
spot-scores = "capacity_hunter.cli:main"     # backwards-compat alias

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/capacity_hunter"]

[tool.ruff]
line-length = 79

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
