[project]
name = "spot-scores"
version = "0.1.0"
description = "Interactive EC2 Spot Placement Score tool."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Doug Morand" }]
dependencies = [
    "boto3>=1.34",
    "click>=8.1",
    "rich>=13.7",
]

[project.scripts]
spot-scores = "spot_scores.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/spot_scores"]

[tool.ruff]
line-length = 79

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
